# annotation

./: .gitignore  AGENTS.md  LICENSE  README.md  pixi.toml
.agents/rules/: code-style-guide.md
.agents/workflows/: commit-with-wrapping.md
.github/workflows/: ci.yml
deployment/: annotation.nginx  annotation.service  deployment.md
docs/: deployment.md
docs/adr/: 0001-backend-canonical-eml-pipeline.md
docs/schemas/: proposals.jsonl.md  user-behavior.jsonl.md
engine/: README.md  environment-min.yml  environment.yml  pixi.toml  proposals.jsonl  pyproject.toml  requirements.txt  user-behavior.jsonl
engine/tests/: test_api_endpoints.py  test_audit.py  test_batch.py  test_email_notification.py  test_eml_geo.py  test_eml_parser.py  test_geo_recommendations_real.py  test_log_behavior.py  test_log_selection.py  test_recommendations.py  test_utils.py
engine/tests/fixtures/: example_eml.xml
engine/webapp/: batch.py  config.py  config.py.template  run.py
engine/webapp/api/: api.py
engine/webapp/models/: annotatable_element.py  document_request.py  log_behavior.py  log_selection.py  mock_objects.py  proposal_request.py
engine/webapp/services/: audit.py  core.py  eml_parser.py  selection_strategies.py
engine/webapp/utils/: eml_geo.py  utils.py
studio/: .env.local  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  vite.config.ts
studio/e2e/: annotation-flow.spec.ts  mock-targets.json  visual.spec.ts
studio/src/: App.tsx  config.template.ts  index.css  types.ts
studio/src/components/: AnnotationEditor.tsx  FileUpload.tsx  Layout.tsx  SuggestTermModal.tsx
studio/src/constants/: mockData.ts
studio/src/services/: documentService.ts  geminiService.ts  recommenderService.ts
studio/src/services/__tests__/: documentService.test.ts
studio/tests/: AnnotationEditor.test.tsx  App.test.tsx  FileUpload.test.tsx  Layout.test.tsx  SuggestTermModal.test.tsx
studio/tests/services/: emlParser.test.ts  geminiService.test.ts  recommenderService.test.ts
