[project]
name = "annotation-engine"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.133",
    "uvicorn>=0.41",
    "gunicorn>=23.0",
    "pydantic>=2.12",
    "httpx>=0.28",
    "requests>=2.32",
    "lxml>=6.0",
    "geoenv>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "linux-aarch64"]

[tool.pixi.dependencies]
python = "3.13.*"
fastapi = ">=0.133"
uvicorn = ">=0.41"
gunicorn = ">=23.0"
pydantic = ">=2.12"
httpx = ">=0.28"
requests = ">=2.32"
lxml = ">=6.0"
proj = ">=9.0"

[tool.pixi.pypi-dependencies]
geoenv = ">=0.1"

[tool.pixi.tasks]
serve = "uvicorn webapp.run:app --reload --port 8001"

[tool.pixi.feature.dev.dependencies]
pytest = ">=9.0"
ruff = ">=0.15"

[tool.pixi.feature.dev.tasks]
test = "pytest"
lint = "ruff check webapp/ tests/"
format = "ruff format webapp/ tests/"

[tool.pixi.environments]
dev = { features = ["dev"], solve-group = "default" }
