[project]
name = "annotation-engine"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.133",
    "uvicorn>=0.41",
    "gunicorn>=23.0",
    "pydantic>=2.12",
    "httpx>=0.28",
    "requests>=2.32",
    "lxml>=6.0",
    "geoenv>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
]

